--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -2,9 +2,6 @@
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
 
-/* @custom-variant dark (&:is(.dark *)); */
-
-/* Light Theme */
 :root {
   --color-primary: #f0f4ff;
   --color-primary-light: #4b6cb7;
@@ -17,7 +14,6 @@
   --hero: #3e4c63;
 }
 
-/* Dark Theme */
 :root.dark {
   --color-primary: #102134;
   --color-primary-light: #1a293f;
@@ -29,3 +25,39 @@
   --color-text-secondary: #afcbff;
   --hero: #afcbff80;
 }
+
+/* ------------------------- Start Of Scrollbar Styles ------------------------- */
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+/* ------------------------- End Of Scrollbar Styles ------------------------- */
+
+/* :root {
+  --color-primary: #f0f9ff;
+  --color-primary-light: #0284c7;
+  --color-secondary: #e0f2fe;
+  --color-accent: #38bdf8;
+  --color-background: #ffffff;
+  --color-background-alt: #f8fafc;
+  --color-text-primary: #0c4a6e;
+  --color-text-secondary: #475569;
+  --hero: #0369a1;
+}
+
+
+:root.dark {
+  --color-primary: #041420;
+  --color-primary-light: #0a2540;
+  --color-secondary: #7dd3fc;
+  --color-accent: #0ea5e9;
+  --color-background: #020617;
+  --color-background-alt: #0f1729;
+  --color-text-primary: #f0f9ff;
+  --color-text-secondary: #bae6fd;
+  --hero: #38bdf880;
+} */
